k8s-csm-master/csm-kb8-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: csm
  name: csm
spec:
  ports:
  - protocol: TCP
    name: "80"
    port: 80
    targetPort: 80
  selector:
    app: csm
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: csm
  name: csm
spec:
  selector:
    matchLabels:
      app: csm
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: csm
    spec:
      containers:
      - name: csm
        image: hub.docker.local:5000/bank/csm-sqlserver:latest
        command: ["java"]
        args: ["-DDB_URL=jdbc:sqlserver://192.168.1.102:1433;databaseName=dcsm", "-DDB_USER=csm", "-DDB_PASSWORD=p@ssw0rd", "-Dspring.profiles.active=docker-sqlserver", "-Xmx512m", "-Xss16m", "-jar", "-Dconsole.level=INFO", "/opt/lib/csm.jar"]
        imagePullPolicy: "Always"
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "1"
            memory: "1073741824"
          requests:
            cpu: 250m
            memory: "536870912"
      restartPolicy: Always
status: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: csm-ingress 
  namespace: bank-apps
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /csm-service
        pathType: Prefix
        backend:
          service:
            name: csm
            port:
              number: 80
